syntax = "proto3";

package trainer;

message Trainer {
	int64 trainer_id = 1;
	int32 u2 = 2;					// 1 for the mc, 2 otherwise
	int32 scout_method = 3;			// 1 for gacha, 2 for story
	int64 exclusivity = 4;			// 1 Regular, 2 Fair-limited, 3 Seasonal
	int32 trainer_base_id = 5;		// TrainerBase.pb
	int32 type = 6;					// motif_type_name_xx.lsd
	int32 rarity = 7;
	int32 role = 8;					// role_type_name_xx.lsd (0 = Phy Strike)
	uint64 monster_id = 9;			// Monster.pb
	int32 move_1_id = 10;			// Move.pb
	int32 move_2_id = 11;
	int32 move_3_id = 12;
	int32 move_4_id = 13;
	int32 weak_type = 14;			// motif_type_name_xx.lsd
	int32 u15 = 15;
	int32 u16 = 16;
	int32 passive_1_id = 17;		// passive_skill_name_xx.lsd / passive_skill_description_xx.lsd
	int32 passive_2_id = 18;
	int32 passive_3_id = 19;
	int32 passive_4_id = 20;
	int32 passive_5_id = 21;
	string u22 = 22;
	string schedule_id = 23;		// Schedule.pb
}

message TrainerTable {
	repeated Trainer entries = 1;
}
